major structural changes 3

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="top">
-    <img class="top-cloud" src="{% static 'cloud.png' %}" alt="cloud">
+    <img class="top-cloud" src="{% media 'cloud.png' %}" alt="cloud">
     <h1>I'm Kamal.</h1>
     <h2>a <span class="span">pro</span>grammer.</h2>
     <img class="bottem-cloud" src="images/cloud.png" alt="cloud">
