redirect to github pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="top">
+  <!-- <div class="top">
     <img class="top-cloud" src="{% static 'cloud.png' %}" alt="cloud">
     <h1>I'm Kamal.</h1>
     <h2>a <span class="span">pro</span>grammer.</h2>
@@ -58,8 +58,10 @@
 
 
   <div class="bottom-container">
-    <!-- <a class="footer-link" href="https://www.linkedin.com/in/kamal-pandi-6066a6222">LinkedIn</a> -->
+   <a class="footer-link" href="https://www.linkedin.com/in/kamal-pandi-6066a6222">LinkedIn</a> 
   </div>
+-->
+  <a href="https://kamalpandi.github.io/Portfolio/">click here</a>
 
 </body>
 
